[gd_scene load_steps=2 format=3 uid="uid://djtsemsu6618g"]

[ext_resource type="Script" uid="uid://cw10dqavrr2rl" path="res://interface/statistics_panel/statistics_panel.gd" id="1_script"]

[node name="StatisticsPanel" type="Panel"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 400.0
grow_horizontal = 0
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "游戏统计"
horizontal_alignment = 1

[node name="DebrisLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "总收集垃圾: 0"

[node name="ResourcesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "资源:"

[node name="BuildingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "建筑:"

[node name="TilesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "地形:"
